# HT_URDF

./: .gitignore  README.md  setup.py
ht_urdf/PiPlusPro_S_12L10A2G2H1W_ZedMini/: CMakeLists.txt  package.xml
ht_urdf/PiPlusPro_S_12L10A2G2H1W_ZedMini/config/: joint_names_PiPlusPro_S_12L10A2G2H1W_ZedMini_260322.yaml
ht_urdf/PiPlusPro_S_12L10A2G2H1W_ZedMini/launch/: display.launch  gazebo.launch
ht_urdf/PiPlusPro_S_12L10A2G2H1W_ZedMini/meshes/: base_link.STL  head_pitch_link.STL  head_yaw_link.STL  l_ankle_pitch_link.STL  l_ankle_roll_link.STL  l_gripper_link.STL  l_hip_pitch_link.STL  l_hip_roll_link.STL  l_shoulder_pitch_link.STL  l_thigh_link.STL  l_upper_arm_link.STL  l_wrist_link.STL  r_ankle_pitch_link.STL  r_ankle_roll_link.STL  r_gripper_link.STL  r_hip_pitch_link.STL  r_hip_roll_link.STL  r_shoulder_pitch_link.STL  r_thigh_link.STL  r_upper_arm_link.STL  r_wrist_link.STL  torso_link.STL  waist_yaw_link.STL
ht_urdf/PiPlusPro_S_12L10A2G2H1W_ZedMini/urdf/: PiPlusPro_S_12L10A2G2H1W_ZedMini.urdf  PiPlusPro_S_12L10A2G2H1W_ZedMini_260322.csv
ht_urdf/PiPlusPro_S_12L10A2G2H1W_ZedMini/xml/: PiPlusPro_S_12L10A2G2H1W_ZedMini.xml
ht_urdf/PiPlus_S_12L10A0G0H1W/: CMakeLists.txt  PiPlus_S_12L10A0G0H1W.urdf
ht_urdf/PiPlus_S_12L10A0G0H1W/config/: joint_names_PiPlus_S_12L10A0G0H1W.yaml
ht_urdf/PiPlus_S_12L10A0G0H1W/launch/: display.launch  gazebo.launch
ht_urdf/PiPlus_S_12L10A0G0H1W/meshes/: base_link.STL  head_pitch_link.STL  head_yaw_link.STL  l_ankle_pitch_link.STL  l_ankle_roll_link.STL  l_calf_link.STL  (+41 more)
ht_urdf/PiPlus_S_12L8A0G2H0W/: CMakeLists.txt  package.xml
(+8 files in other folders)
